passwords should be read from the env file

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 DATA_VOLUME=/dev/disk/by-id/some-disk-id
 DOMAIN=example.com
 LETSENCRYPT_EMAIL=somebody@example.com
-
+MYSQL_PASSWORD=somepassword
+MYSQL_ROOT_PASSWORD=someotherpassword
